--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,10 +1,9 @@
-$primary: #ff6e6c;
-$secondary: #1f1235;
-$success: #1b1425;
-$info: #67568c;
-$warning: #fbdd74;
-$danger: #f4effc;
-$light: #e2daeb;
-$dark: #4c346b;
+$primary: #3da9fc;
+$secondary: #094067;
+$success: #5f6c7b;
+$info: #90b4ce;
+$warning: #ef4565;
+$danger: #d8eefe;
+$light: #fffffe;
 
 @import '../node_modules/bootstrap/scss/bootstrap';
