--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,1 @@
-a:hover {
-    color: #90b4ce !important;
-}
-
-.hero-btn:hover {
-    color: white !important;
-}
-
-@media screen and (min-width: 768px) {
-    .p-lg-40 {
-        padding: 200px;
-    }    
-}
-
-@media screen and (max-width: 767px) {
-    .p-lg-40 {
-        padding: 3rem;
-    }
-    
-}
-
-.contact-card {
-    border-radius: 25px !important;
-}
+/* Legacy styles - to be cleaned up */
